--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "notion-cms-blog",
   "version": "0.1.0",
   "private": true,
+  "author": "LEE JIN SOO",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,12 +15,20 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "prettier": "^2.8.0",
-    "eslint": "8.29.0",
-    "eslint-config-next": "13.0.6",
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "autoprefixer": "^10.4.13",
+    "eslint": "8.29.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "13.0.6",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-tailwindcss": "^3.7.1",
+    "postcss": "^8.4.19",
+    "prettier": "^2.8.0",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.9.3"
   }
 }
