--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "baseUrl": ".",
+    "rootDirs": ["src"],
+    "paths": {
+      "pages/*": ["./pages/*"],
+      "@/*": ["./src/*"],
+    },
     "incremental": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
