--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,12 @@
   "env": {
     "jest": true
   },
-  "extends": ["airbnb", "next", "plugin:tailwindcss/recommended", "plugin:prettier/recommended"],
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint", "prettier"],
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
+  "extends": ["next/core-web-vitals",  "plugin:tailwindcss/recommended", "plugin:@typescript-eslint/recommended", "plugin:prettier/recommended", "prettier/@typescript-eslint"],
   "rules": {
     "react/function-component-definition": [2, { "namedComponents": "arrow-function" }],
     "react/jsx-filename-extension": [
