--- a/package.json
+++ b/package.json
@@ -15,15 +15,17 @@
     "pretendard": "^1.3.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
     "sharp": "^0.32.1"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
     "autoprefixer": "^10.4.13",
     "eslint": "8.29.0",
-    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "13.0.6",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
