--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "next": "13.0.6",
+    "next": "^13.4.4",
     "pretendard": "^1.3.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "sharp": "^0.32.1"
   },
@@ -26,7 +26,7 @@
     "@typescript-eslint/parser": "^5.59.8",
     "autoprefixer": "^10.4.13",
     "eslint": "8.29.0",
-    "eslint-config-next": "13.0.6",
+    "eslint-config-next": "^13.4.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
