--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@notionhq/client": "^2.2.5",
     "next": "^13.4.4",
     "pretendard": "^1.3.6",
     "react": "^18.2.0",
