--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
   "dependencies": {
     "@notionhq/client": "^2.2.5",
     "next": "^13.4.4",
+    "notion-client": "^6.16.0",
+    "notion-types": "^6.16.0",
+    "notion-utils": "^6.16.0",
     "pretendard": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-notion-x": "^6.16.0",
     "sharp": "^0.32.1"
   },
   "devDependencies": {
