--- a/package.json
+++ b/package.json
@@ -16,12 +16,10 @@
     "notion-client": "^6.16.0",
     "notion-types": "^6.16.0",
     "notion-utils": "^6.16.0",
-    "pretendard": "^1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
-    "react-notion-x": "^6.16.0",
-    "sharp": "^0.32.1"
+    "react-notion-x": "^6.16.0"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
