--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.2.5",
+    "lodash": "^4.17.21",
     "next": "^13.4.4",
     "notion-client": "^6.16.0",
     "notion-types": "^6.16.0",
@@ -22,6 +23,7 @@
     "react-notion-x": "^6.16.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.195",
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
