--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.2.5",
+    "dayjs": "^1.11.8",
     "lodash": "^4.17.21",
     "next": "^13.4.4",
     "notion-client": "^6.16.0",
