--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@notionhq/client": "^2.2.5",
     "dayjs": "^1.11.8",
+    "got": "^13.0.0",
     "lodash": "^4.17.21",
+    "lqip-modern": "^2.0.0",
     "next": "^13.4.4",
     "notion-client": "^6.16.0",
     "notion-types": "^6.16.0",
@@ -24,7 +26,9 @@
     "react-notion-x": "^6.16.0"
   },
   "devDependencies": {
+    "@types/got": "^9.6.12",
     "@types/lodash": "^4.14.195",
+    "@types/lqip-modern": "^1.1.3",
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
