--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "prepare": "husky install"
@@ -42,6 +43,7 @@
     "eslint-plugin-tailwindcss": "^3.7.1",
     "husky": ">=7",
     "lint-staged": "^13.1.0",
+    "next-sitemap": "^4.1.8",
     "postcss": "^8.4.19",
     "prettier": "^2.8.0",
     "tailwindcss": "^3.2.4",
