--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@notionhq/client": "^2.2.5",
     "dayjs": "^1.11.8",
+    "jotai": "^2.8.0",
     "lodash": "^4.17.21",
     "lqip-modern": "^2.0.0",
     "next": "^13.4.4",
