--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "lodash": "^4.17.21",
     "lqip-modern": "^2.0.0",
     "next": "^13.4.4",
-    "notion-client": "^6.16.0",
     "notion-types": "^6.16.0",
     "notion-utils": "^6.16.0",
+    "p-map": "^7.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
