feat: Replace react-notion-x with notion-to-jsx for rendering Notion content

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "jotai": "^2.8.0",
     "lodash": "^4.17.21",
     "next": "^13.4.4",
-    "notion-to-utils": "^0.4.21",
+    "notion-to-jsx": "^1.1.1",
+    "notion-to-utils": "^1.0.0",
     "p-map": "^7.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
