--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "jotai": "^2.8.0",
     "lodash": "^4.17.21",
     "next": "^13.4.4",
-    "notion-to-jsx": "^1.1.1",
+    "notion-to-jsx": "^1.2.0",
     "notion-to-utils": "^1.0.0",
     "p-map": "^7.0.2",
     "react": "^18.2.0",
@@ -51,5 +51,6 @@
       "prettier --write",
       "eslint --fix"
     ]
-  }
+  },
+  "packageManager": "yarn@1.22.19+sha512.ff4579ab459bb25aa7c0ff75b62acebe576f6084b36aa842971cf250a5d8c6cd3bc9420b22ce63c7f93a0857bc6ef29291db39c3e7a23aab5adfd5a4dd6c5d71"
 }
