--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "jotai": "^2.8.0",
     "lodash": "^4.17.21",
     "next": "^13.4.4",
-    "notion-to-jsx": "^1.2.3",
+    "notion-to-jsx": "^1.2.4",
     "notion-to-utils": "^1.0.0",
     "p-map": "^7.0.2",
+    "prismjs": "^1.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.195",
     "@types/node": "18.11.10",
+    "@types/prismjs": "^1.26.5",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "@types/rss": "^0.0.32",
