--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "add": "^2.0.6",
     "dayjs": "^1.11.8",
     "is-url-superb": "^6.1.0",
     "jotai": "^2.8.0",
@@ -19,11 +20,14 @@
     "notion-to-jsx": "^1.2.7",
     "notion-to-utils": "^1.1.0",
     "p-map": "^7.0.2",
+    "plaiceholder": "^3.0.0",
     "prismjs": "^1.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
-    "rss": "^1.2.2"
+    "rss": "^1.2.2",
+    "sharp": "^0.34.1",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.195",
