--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "rss": "^1.2.2",
-    "sharp": "^0.34.1",
+    "sharp": "0.32.6",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
