--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "rss": "^1.2.2",
-    "sharp": "0.32.6",
-    "yarn": "^1.22.22"
+    "sharp": "0.32.6"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.195",
@@ -57,5 +56,5 @@
       "eslint --fix"
     ]
   },
-  "packageManager": "yarn@1.22.19+sha512.ff4579ab459bb25aa7c0ff75b62acebe576f6084b36aa842971cf250a5d8c6cd3bc9420b22ce63c7f93a0857bc6ef29291db39c3e7a23aab5adfd5a4dd6c5d71"
+  "packageManager": "pnpm@9.15.5+sha512.845196026aab1cc3f098a0474b64dfbab2afe7a1b4e91dd86895d8e4aa32a7a6d03049e2d0ad770bbe4de023a7122fb68c1a1d6e0d033c7076085f9d5d4800d4"
 }
