--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@giscus/react": "^3.1.0",
+    "@react-icons/all-files": "^4.1.0",
     "dayjs": "^1.11.19",
     "jotai": "^2.16.2",
     "lodash": "^4.17.21",
@@ -22,7 +24,6 @@
     "prismjs": "^1.30.0",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-icons": "^5.5.0",
     "rss": "^1.2.2",
     "sharp": "0.34.5"
   },
