--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@react-icons/all-files": "^4.1.0",
     "dayjs": "^1.11.19",
     "jotai": "^2.16.2",
-    "lodash": "^4.17.21",
     "next": "^16.1.1",
     "notion-to-jsx": "^1.3.1",
     "notion-to-utils": "^1.2.0",
@@ -29,17 +28,18 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
-    "@types/lodash": "^4.14.195",
     "@types/node": "^22.0.0",
     "@types/prismjs": "^1.26.5",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@types/rss": "^0.0.32",
+    "babel-plugin-react-compiler": "^1.0.0",
     "eslint": "^9.18.0",
     "eslint-config-next": "^16.1.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-better-tailwindcss": "^4.0.1",
     "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react-compiler": "19.1.0-rc.2",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
